# rust_file_progress

./: .gitignore  Cargo.toml  README.md  Untitled.ipynb  simple_test.html  simple_test.md
.ipynb_checkpoints/: Untitled-checkpoint.ipynb
src/: basic_progress.rs  file_progress_iterator.rs  html_file_progress.html  html_file_progress.rs  lib.rs  markdown_file_progress.rs  par_iter.rs  traits.rs
tests/: test_progress_html.rs
