[package]
name = "file_progress"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
rayon = ["dep:rayon"]
default = ["rayon"]

[dependencies]
rs-humanize = "1.2.0"
chrono = "0.4.22"
rayon = {version="1.5.3", optional = true}
